--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nam
           nisi ad incidunt aperiam enim earum expedita dolorem doloremque
-          voluptates. Numquam blanditiis facilis error aut!
+          voluptates. Numquam blanditiis facilis error au
         </p>
       </div>
     </div>
