--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       <div class="photo">
         <img src="images/thumb2_300x300.jpg" alt="" />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
-          ipsum.
+          Lorem ipsum dolor sit amonsectetur adipisicing elit. Impedit, ipsum.
         </p>
       </div>
       <div class="photo">
