--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <div class="photo">
         <img src="images/thumb3_300x300.jpg" alt="" />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nam
-          nisi ad incidunt aperiam enim earum expedita dolorem doloremque
-          voluptates. Numquam blanditiis facilis error au
+          Lorem ipsum dolor amet consectetur adipisicing elit. Deserunt nam nisi
+          ad incidunt aperiam enim earum expedita dolorem doloremque voluptates.
+          Numquam blanditiis facilis error au
         </p>
       </div>
     </div>
